--- a/src/pages/HomeTab/HomeTab.module.css
+++ b/src/pages/HomeTab/HomeTab.module.css
@@ -6,7 +6,6 @@
   overflow-y: scroll;
   max-height: calc(100vh - 240px);
   @media only screen and (min-width: 768px) {
-    overflow-y: unset;
     max-height: calc(100vh - 317px);
     height: 280px;
   }
@@ -19,29 +18,21 @@
   }
 }
 
-.scroll::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: #40357d;
-  opacity: .6;
+.scroll::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #40357d;
+  opacity: 0.6;
 }
 
-.scroll::-webkit-scrollbar
-{
+.scroll::-webkit-scrollbar {
   border-radius: 5px;
-	width: 8px;
-	background-color: #40357d;
+  width: 8px;
+  background-color: #40357d;
 }
 
-.scroll::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #8212be;
-}
-
-.div {
-  /* -ms-overflow-style: none; IE and Edge */
-  /* scrollbar-width: none; Firefox */
+.scroll::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #8212be;
 }
